[package]
name = "altagos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
web-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }
yew-agent = { git = "https://github.com/yewstack/yew" }
gloo = "0.8.0"
log = "0.4"
wasm-logger="0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
