[package]
name = "altagos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }
yew-agent = { git = "https://github.com/yewstack/yew" }
gloo = "0.8.0"
log = "0.4"
wasm-logger="0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0.146", features = ["derive"] }
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }


[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent"
]